--- a/Code_EEICT_2025.ipynb
+++ b/Code_EEICT_2025.ipynb
@@ -1244,76 +1244,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git config --global user.email \"253298@vutbr.cz\"\n",
-    "!git config --global user.name \"Your Name\""
+    "!git branch -m master main"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initialized empty Git repository in C:/Users/Terezka/Desktop/EEICT/GitHub_EEICT_2025/.git/\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git init"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!git remote add origin https://github.com/terezaluskova/EEICT2025.git"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!git add ."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Author identity unknown\n",
-      "\n",
-      "*** Please tell me who you are.\n",
-      "\n",
-      "Run\n",
-      "\n",
-      "  git config --global user.email \"you@example.com\"\n",
-      "  git config --global user.name \"Your Name\"\n",
-      "\n",
-      "to set your account's default identity.\n",
-      "Omit --global to set the identity only in this repository.\n",
-      "\n",
-      "fatal: unable to auto-detect email address (got 'Terezka@LAPTOP-FEV0JN7F.(none)')\n"
+      "fatal: pathspec 'Code_EEICT_2025' did not match any files\n"
      ]
     }
    ],
    "source": [
-    "!git commit -m \"První commit - přidání Jupyter notebooku\""
+    "!git add Code_EEICT_2025"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch main\n",
+      "Your branch is up to date with 'origin/master'.\n",
+      "\n",
+      "Changes not staged for commit:\n",
+      "  (use \"git add <file>...\" to update what will be committed)\n",
+      "  (use \"git restore <file>...\" to discard changes in working directory)\n",
+      "\tmodified:   Code_EEICT_2025.ipynb\n",
+      "\n",
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git commit -m \"Druhý commit - přidání Jupyter notebooku\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/terezaluskova/EEICT2025.git\n",
+      " ! [rejected]        main -> main (fetch first)\n",
+      "error: failed to push some refs to 'https://github.com/terezaluskova/EEICT2025.git'\n",
+      "hint: Updates were rejected because the remote contains work that you do not\n",
+      "hint: have locally. This is usually caused by another repository pushing to\n",
+      "hint: the same ref. If you want to integrate the remote changes, use\n",
+      "hint: 'git pull' before pushing again.\n",
+      "hint: See the 'Note about fast-forwards' in 'git push --help' for details.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git push -u origin main"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "From https://github.com/terezaluskova/EEICT2025\n",
+      " * branch            main       -> FETCH_HEAD\n",
+      " * [new branch]      main       -> origin/main\n",
+      "fatal: refusing to merge unrelated histories\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git pull origin main"
    ]
   }
  ],
