--- a/Code_EEICT_2025.ipynb
+++ b/Code_EEICT_2025.ipynb
@@ -1244,28 +1244,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Merge made by the 'ort' strategy.\n",
+      " README.md | 62 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++\n",
+      " 1 file changed, 62 insertions(+)\n",
+      " create mode 100644 README.md\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "From https://github.com/terezaluskova/EEICT2025\n",
+      " * branch            main       -> FETCH_HEAD\n",
+      "warning: in the working copy of 'Code_EEICT_2025.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+     ]
+    }
+   ],
    "source": [
-    "!git branch -m master main"
+    "!git pull origin main --allow-unrelated-histories"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "fatal: pathspec 'Code_EEICT_2025' did not match any files\n"
+      "warning: in the working copy of 'Code_EEICT_2025.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 48142dd] VyĹ™eĹˇenĂ­ konfliktĹŻ\n",
+      " 1 file changed, 49 insertions(+), 28 deletions(-)\n"
      ]
     }
    ],
    "source": [
-    "!git add Code_EEICT_2025"
+    "!git add Code_EEICT_2025.ipynb\n",
+    "!git commit -m \"Vyřešení konfliktů\""
    ]
   },
   {
