--- a/Code_EEICT_2025.ipynb
+++ b/Code_EEICT_2025.ipynb
@@ -1244,87 +1244,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Merge made by the 'ort' strategy.\n",
-      " README.md | 62 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++\n",
-      " 1 file changed, 62 insertions(+)\n",
-      " create mode 100644 README.md\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "From https://github.com/terezaluskova/EEICT2025\n",
-      " * branch            main       -> FETCH_HEAD\n",
-      "warning: in the working copy of 'Code_EEICT_2025.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git pull origin main --allow-unrelated-histories"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "warning: in the working copy of 'Code_EEICT_2025.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[main 48142dd] VyĹ™eĹˇenĂ­ konfliktĹŻ\n",
-      " 1 file changed, 49 insertions(+), 28 deletions(-)\n"
+      "fatal: not removing '.ipynb_checkpoints' recursively without -r\n"
      ]
     }
    ],
    "source": [
-    "!git add Code_EEICT_2025.ipynb\n",
-    "!git commit -m \"Vyřešení konfliktů\""
+    "!git rm --cached .ipynb_checkpoints"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "On branch main\n",
-      "Your branch is up to date with 'origin/master'.\n",
-      "\n",
-      "Changes not staged for commit:\n",
-      "  (use \"git add <file>...\" to update what will be committed)\n",
-      "  (use \"git restore <file>...\" to discard changes in working directory)\n",
-      "\tmodified:   Code_EEICT_2025.ipynb\n",
-      "\n",
-      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
+      "[main f748c5a] OdstranÄ›nĂ­ souboru Phenotype_Ath_RGR_6.xlsx\n",
+      " 1 file changed, 0 insertions(+), 0 deletions(-)\n",
+      " delete mode 100644 Phenotype_Ath_RGR_6.xlsx\n"
      ]
     }
    ],
    "source": [
-    "!git commit -m \"Druhý commit - přidání Jupyter notebooku\""
+    "!git commit -m \"Odstranění souboru .ipynb_checkpoints\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1332,38 +1288,12 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/terezaluskova/EEICT2025.git\n",
-      " ! [rejected]        main -> main (fetch first)\n",
-      "error: failed to push some refs to 'https://github.com/terezaluskova/EEICT2025.git'\n",
-      "hint: Updates were rejected because the remote contains work that you do not\n",
-      "hint: have locally. This is usually caused by another repository pushing to\n",
-      "hint: the same ref. If you want to integrate the remote changes, use\n",
-      "hint: 'git pull' before pushing again.\n",
-      "hint: See the 'Note about fast-forwards' in 'git push --help' for details.\n"
+      "   7fdf0e7..f748c5a  main -> main\n"
      ]
     }
    ],
    "source": [
-    "!git push -u origin main"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "From https://github.com/terezaluskova/EEICT2025\n",
-      " * branch            main       -> FETCH_HEAD\n",
-      " * [new branch]      main       -> origin/main\n",
-      "fatal: refusing to merge unrelated histories\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git pull origin main"
+    "!git push origin main"
    ]
   }
  ],
