--- a/Code_EEICT_2025.ipynb
+++ b/Code_EEICT_2025.ipynb
@@ -1244,56 +1244,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "fatal: not removing '.ipynb_checkpoints' recursively without -r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!git rm --cached .ipynb_checkpoints"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[main f748c5a] OdstranÄ›nĂ­ souboru Phenotype_Ath_RGR_6.xlsx\n",
-      " 1 file changed, 0 insertions(+), 0 deletions(-)\n",
-      " delete mode 100644 Phenotype_Ath_RGR_6.xlsx\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git commit -m \"Odstranění souboru .ipynb_checkpoints\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "To https://github.com/terezaluskova/EEICT2025.git\n",
-      "   7fdf0e7..f748c5a  main -> main\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git push origin main"
+    "!git config --global core.autocrlf true"
    ]
   }
  ],
