--- a/Code_EEICT_2025.ipynb
+++ b/Code_EEICT_2025.ipynb
@@ -1244,11 +1244,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git config --global core.autocrlf true"
+    "!git pull origin main"
    ]
   }
  ],
